--- a/P1_strooptest.html
+++ b/P1_strooptest.html
@@ -11973,9 +11973,9 @@ div#notebook {
 <p><strong>2.此任务的适当假设集是什么？你想执行什么类型的统计测试？为你的选择提供正当理由。</strong></p>
 <blockquote><p>对于这个统计实验，我的猜想是:<strong>在一致文字条件下，人们识别出同等大小列表中词语颜色名称的时间少于不一致文字条件的情形</strong>；<br>
 因此，我认为这个实验的适当假设集应该表示为：</p>
-<p><em>（用 $μ_C$表示一致文字条件组($Congruent$)的总体均值，用 $μ_I$表示非一致文字条件组($Incongruent$)的总体均值）</em><br>
-零假设: $H_0:μ_C \geq μ_I$，在一致文字条件下，人们识别出同等大小列表中词语颜色名称的时间不少于不一致文字条件的情形;<br>
-备择假设:$H_A:μ_C < μ_I$,在一致文字条件下，人们识别出同等大小列表中词语颜色名称的时间少于不一致文字条件的情形。</p>
+<p><em>（用 $\mu_C$表示一致文字条件组(</em>Congruent<em>)的总体均值，用 $\mu_I$表示非一致文字条件组(</em>Incongruent<em>)的总体均值）</em><br>
+零假设: $H_0:\mu_C \geq \mu_I$，在一致文字条件下，人们识别出同等大小列表中词语颜色名称的时间不少于不一致文字条件的情形;<br>
+备择假设:$H_A:\mu_C < \mu_I$,在一致文字条件下，人们识别出同等大小列表中词语颜色名称的时间少于不一致文字条件的情形。</p>
 <p>在此实验中，我们应该执行的是一个单变量的相依样本<em>t</em>检验，原因包括：</p>
 <ul>
 <li>可以假设该实验的总体遵循正态分布，这是<em>t</em>检验的前提；</li>
